added long polling for comments

--- a/anywhere_app/blog/templates/blog/topic_detail.html
+++ b/anywhere_app/blog/templates/blog/topic_detail.html
@@ -1,4 +1,5 @@
 {% extends 'blog/base.html' %}
+{% load static %}
 
 {% block content %}
     <h1>{{ topic.title }}</h1>
@@ -11,13 +12,15 @@
                 {{ form.as_p }}
                 <button class="button-primary" type="submit">Comment</button>
             </form>
-            {% for comment in comments %}
-                <strong>{{ comment.author }}</strong>
-                <small>{{ comment.updated_at }}</small>
-                <p>{{ comment.body }}</p>
-            {% empty %}
-                <p>There are no comments yet.</p>
-            {% endfor %}
+            <div id="comment-list">
+                {% for comment in comments %}
+                    <strong>{{ comment.author }}</strong>
+                    <small>{{ comment.updated_at }}</small>
+                    <p>{{ comment.body }}</p>
+                {% empty %}
+                    <p>There are no comments yet.</p>
+                {% endfor %}
+            </div>
         </div>
         <div class="one-third column">
             <h4>Navigation</h4>
@@ -34,4 +37,7 @@
             </ul>
         </div>
     </div>
+    <script rel="script" src="{% static 'blog/js/jquery.min.js' %}"></script>
+    <script rel="script" src="{% static 'blog/js/main.js' %}"></script>
+    <script>topicId = {{ topic.id }};</script>
 {% endblock %}
